# PEERCE

./: .gitignore  LICENSE  README.md  citation.cff  environment.yml  requirements.txt  setup.cfg  setup.py
apedia/: predict_tps.py  predict_tps_wsi.py  preprocess_cell_type_data.py  train_cell_type_detector.py  train_tumor_patch_detector.py
apedia/data_processing/: deepliif_hema_patch.py  deepliif_networks.py  generate_segmentation_map.py  instance_segmentation.py  model_loader.py  roi_infos.py  segmentation_viz.py  timm_convnext_model_ds_predictions_viz.py  wsi_patch_df_6channel_dataset.py
apedia/deep_learning/: dl_utils.py  model_loader.py  train_unet_cell_segmentation_and_valid.py  wsi_tps_prediction.py
apedia/utils/: analyze_segmentation_output.py  cli.py  params.py
jupyter_notebook_tutorials/: modify_df_to_default.ipynb  predict_tps.ipynb  predict_tps_wsi.ipynb  preprocess_cell_type_data.ipynb  train_cell_type_detector.ipynb  train_tumor_patch_detector.ipynb
jupyter_notebooks/: train_cell_type_detector.ipynb  train_tumor_patch_detector.ipynb
peerce/: predict_tps_wsi.py  preprocess_cell_type_data.py  train_cell_type_detector.py  train_tumor_patch_detector.py
peerce/data_processing/: create_tumor_roi_for_aligned_he.py  datasets.py  deepliif_hema_patch.py  deepliif_networks.py  extract_and_visualize_patch_from_wsi.py  instance_segmentation.py  timm_convnext_model_ds_predictions_viz.py
peerce/deep_learning/: model_loader.py  unet_functionality.py  wsi_tps_prediction.py
peerce/utils/: analyze_segmentation_output.py  cli.py  read_and_visualize_ome_tiff.py
src/utils/: params.py
