[metadata]
name = apedia
version = 0.1.0
author = Fabian Reith
author_email = Fabian.Reith@charite.de
description = A deep learning tool for PD-L1 expression diagnostics in angiosarcoma. Supports Linux only.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kainmueller-Lab/APEDIA
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = 3.8
install_requires =
    numpy
    pandas
    torch
    # TODO add more dependencies
