[metadata]
name = peerce
version = 0.1.0
author = Fabian Reith
author_email = Fabian.Reith@charite.de
description = A deep learning tool for PD-L1 expression diagnostics in rare cancer entities. Supports Linux only.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kainmueller-Lab/PEERCE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    albumentations==1.4.*
    numpy==1.24.*
    pandas==2.*
    torch==2.*
    tqdm==4.*
    segmentation-models-pytorch==0.3.*
    matplotlib==3.*
    cellpose==2.2
    scikit-image==0.21.*
    spams==2.6.*
    staintools==2.1.*
    pyarrow==15.*
    notebook

[options.entry_points]
console_scripts =
    peerce = peerce.utils.cli:main
